# matrix-client

./: .gitignore  .gitmodules  .pnp.cjs  .yarnrc.yml  AUTO_UPDATE.md  README.md  auth_response_headers.txt  components.json  curl_discovery.txt  curl_output.txt  implement_arRPC.md  implement_e2ee_fixes.md  implement_game_detection.md  jellyfin-openapi.json  log.txt  nuxt.config.ts  package-lock.json  package.json  registration_http.json  registration_ip.json  registration_localhost.json  registration_mixed.json  registration_native.json  registration_public.json  rsrpc.patch  rsrpc_db.patch  rsrpc_existing.patch  server.crt
.dev/keys/: server.crt  server.key
.github/workflows/: release.yml
.jules/: bolt.md
app/: app.vue  declarations.d.ts  sw.js
app/components/: AboutModal.vue  ActivityStatus.vue  Chat.vue  ChatFile.vue  ChatImage.vue  ChatSidebar.vue  ChatSidebarCategory.vue  ChatSticker.vue  ColorModeToggle.vue  CreateRoomModal.vue  CreateSpaceModal.vue  CustomTitlebar.vue  GameCard.vue  GamePresence.vue  GlobalConfirmationDialog.vue  GlobalContextMenu.vue  GlobalSearchModal.vue  IncomingCallBanner.vue  JellyfinLoginModal.vue  (+22 more)
public/: manifest.json  sw.js  update.json
scripts/: build-arrpc-sidecar.cjs  build-arrpc-sidecar.js  build-arrpc-sidecar.sh  test-rpc.cjs  verify_login_fix.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  windows.json
src-tauri/src/: game_scanner.rs  lib.rs  main.rs  rpc.rs
src-tauri/src/rpc_server/: ipc.rs  mod.rs  transport.rs  types.rs  websocket.rs  ws.rs
(+118 files in other folders)
