[workspace]
members = [".", "rsrpc"]

[package]
name = "tumult"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tumult_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["macos-private-api", "devtools", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
sysinfo = "0.38"
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["blocking"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
tauri-plugin-decorum = "1.1.1"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }
